# gititpy

./: .gitignore  README.md  flake.nix  gititpy.toml  manage.py  pyproject.toml  result  setup.py
.github/workflows/: pages.yml  test-report.yml  tests.yml
gititpy/: artifacts_cli.py  asgi.py  cli.py  config.py  settings.py  urls.py  wsgi.py
sandbox/: README.md
sandbox/user/: README.md
wiki/: artifacts.py  bibliography.py  darcsit.py  helpers.py  plots.py  site.py  source.py  static_site.py  storage.py  tags.py  templates.py  tests.py  types.py  urls.py  views.py
wiki/darcsit_helpers/: __init__.py  build.py
wiki/darcsit_helpers/src/: literate-c.c
wiki/static/wiki/css/: custom.css  gititpy.css  highlighting.css  print.css  screen.css
wiki/static/wiki/js/: search.js
wiki/templates/wiki/: 404.html  base.html  breadcrumbs.html  delete.html  directory_index.html  edit.html  history.html  index.html  page.html  recent.html  search.html  sidebar.html  source_index.html  source_page.html  tabs.html
wiki/tests/: __init__.py  test_artifacts.py  test_bibliography.py  test_cli.py  test_darcsit.py  test_links.py  test_plots.py  test_site.py  test_storage.py  test_tags.py
