[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gititpy"
version = "0.1.0"
description = "A small Gitit/Darcsit-style static site generator"
requires-python = ">=3.12"
dependencies = [
  "Jinja2>=3.1",
  "Pygments>=2.0",
]

[project.scripts]
gititpy = "gititpy.cli:main"
gititpy-artifacts = "gititpy.artifacts_cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["gititpy", "wiki", "wiki.*"]
namespaces = false

[tool.setuptools.package-data]
"wiki" = [
  "templates/wiki/*.html",
  "static/wiki/css/*.css",
  "static/wiki/js/*.js",
  "static/wiki/img/*",
  "static/wiki/img/icons/*",
]
"wiki.darcsit_helpers" = [
  "src/*.c",
  "bin/*",
]
